--- a/Projeto.Presentation/App.config
+++ b/Projeto.Presentation/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <connectionStrings>
+    <add name="ControleDBClientes" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ControleBDClientes;User Id=sa;Password=admin123!@#;"/>
+  </connectionStrings>
 </configuration>
